--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/DevinAugot/QAP-1-S3/issues"
   },
-  "homepage": "https://github.com/DevinAugot/QAP-1-S3#readme"
+  "homepage": "https://github.com/DevinAugot/QAP-1-S3#readme",
+  "dependencies": {
+    "http": "^0.0.1-security",
+    "lodash": "^4.17.21"
+  }
 }
